# foresight

./: .gitignore  LICENSE  README.md  interview_processor.py  process_single.py  pyproject.toml  requirements.txt  setup.sh  test_interview_processor.py  watch_interviews.py
Foresight/: .gitignore  README.md  interview_processor.py  setup.sh
