[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foresight-transcribe"
version = "0.1.0"
description = "Turn recorded conversations into structured insights. Local transcription + AI extraction."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "dnoma", email = "dnoma@users.noreply.github.com"}
]
keywords = [
    "whisper",
    "transcription",
    "ollama",
    "speech-to-text",
    "audio",
    "interview",
    "local-llm",
    "ai",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "openai-whisper>=20230918",
    "PyYAML>=6.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
ui = [
    "gradio>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/dnoma/foresight"
Repository = "https://github.com/dnoma/foresight"
Issues = "https://github.com/dnoma/foresight/issues"

[project.scripts]
foresight = "interview_processor:main"

[tool.setuptools]
py-modules = ["interview_processor", "process_single", "watch_interviews"]
